unpackaged/main/default/objects/Test_Step__c/Test_Step__c.object-meta.xml
<CustomObject>
    <description>One authored step within a Test Case definition (what to do + expected result). Actual results live on Test Step Result, one per execution. Keep Description/Expected clean and structured — a future automation phase reads from them.</description>
    <label>Test Step</label>
    <nameField>
        <displayFormat>TS-{00000}</displayFormat>
        <label>Test Step Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>