unpackaged/main/default/objects/Test_Step__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>What should happen. Blank when Is Explore is checked.</description>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>