unpackaged/main/default/objects/Test_Step__c/fields/Explore_Prompt__c.field-meta.xml
<CustomField>
    <fullName>Explore_Prompt__c</fullName>
    <description>The &quot;try this&quot; text shown to testers when Is Explore is checked.</description>
    <label>Explore Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>