unpackaged/main/default/objects/Test_Step__c/fields/Is_Explore__c.field-meta.xml
<CustomField>
    <fullName>Is_Explore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks this as a free-form exploratory prompt rather than a scripted step; the runner swaps result buttons for a notes field.</description>
    <label>Is Explore</label>
    <type>Checkbox</type>
</CustomField>