unpackaged/main/default/objects/Test_Step__c/fields/Step_Description__c.field-meta.xml
<CustomField>
    <fullName>Step_Description__c</fullName>
    <description>What to do. Blank when Is Explore is checked.</description>
    <label>Step Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>