unpackaged/main/default/objects/Test_Step__c/fields/Step_Number__c.field-meta.xml
<CustomField>
    <fullName>Step_Number__c</fullName>
    <description>Display/run order within the case.</description>
    <label>Step Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>