unpackaged/main/default/objects/Test_Step__c/fields/Step_Title__c.field-meta.xml
<CustomField>
    <fullName>Step_Title__c</fullName>
    <description>Optional short name for this single step, shown in the runner&#39;s step list and above the instruction. Unlike Test Condition (a heading shared by consecutive steps) this belongs to one step alone.</description>
    <label>Step Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>