unpackaged/main/default/objects/Test_Step__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <description>Owning case definition.</description>
    <label>Test Case</label>
    <referenceTo>Test_Case__c</referenceTo>
    <relationshipLabel>Test Steps</relationshipLabel>
    <relationshipName>Test_Steps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>