unpackaged/main/default/objects/Test_Step__c/fields/Test_Condition__c.field-meta.xml
<CustomField>
    <fullName>Test_Condition__c</fullName>
    <description>Group heading shared by consecutive steps. Renaming propagates to every step on the case sharing the old value (bulk update, not per-row).</description>
    <label>Test Condition</label>
    <length>120</length>
    <type>Text</type>
</CustomField>