unpackaged/main/default/objects/Test_Step__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Test_Condition__c</columns>
    <columns>Step_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>